--- a/gbtest.html
+++ b/gbtest.html
@@ -309,7 +309,7 @@
   <script>
     // --- KONFIGURASI ---
     // GANTI URL INI DENGAN URL WEB APP ANDA SETELAH DEPLOY BACKEND
-    const API_URL = "https://script.google.com/macros/s/AKfycby..........(Ganti_Dengan_Punya_Anda)........../exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbzhrWjl2Dc0i8V45dD8vNXrt3gfmvEU1pZ5hZOELkTz6e29l68d2hsHfGQEjqTVYdY0/exec";
 
     // STATE UTAMA & PAGINATION
     var STATE = { 
